# anki-xprofile-merge

./: Cargo.toml
migrations/: 20231115164257_notes.sql  20231118110141_decks.sql  20240130203656_knownmorphs.sql
src/: ankiconnect.rs  ankidb.rs  bank_fields.rs  lib.rs  main.rs  morphdb.rs  mydb.rs  parser.rs  path_converter.rs
