[package]
name = "anki-xprofile-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.8.0", features = ["json"]}
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite", ]}
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"]}
notmecab = "0.5.1"
inquire = "0.6.2"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
wana_kana = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.12.1"
